fix broken index tree in chrome dev (#170)

--- a/assets/style/components/navigation/index.less
+++ b/assets/style/components/navigation/index.less
@@ -6,6 +6,7 @@
 		z-index: 1;
 		top: 60px;
 		bottom: 0;
+		left: 0;
 		margin-bottom: 40px;
 		overflow-x: hidden;
 		overflow-y: auto;
